// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`multiple opens 1`] = `
<div>
  <OpenHour
    day={0}
    hour={
      Array [
        Object {
          "day": 0,
          "end": "1430",
          "is_overnight": false,
          "start": "1100",
        },
      ]
    }
  />
  <OpenHour
    day={1}
    hour={
      Array [
        Object {
          "day": 1,
          "end": "1430",
          "is_overnight": false,
          "start": "1100",
        },
      ]
    }
  />
</div>
`;

exports[`sort by day and start hour 1`] = `
<div>
  <OpenHour
    day={0}
    hour={
      Array [
        Object {
          "day": 0,
          "end": "1430",
          "is_overnight": false,
          "start": "1100",
        },
        Object {
          "day": 0,
          "end": "2000",
          "is_overnight": false,
          "start": "1730",
        },
        Object {
          "day": 0,
          "end": "0200",
          "is_overnight": true,
          "start": "2300",
        },
      ]
    }
  />
  <OpenHour
    day={1}
    hour={
      Array [
        Object {
          "day": 1,
          "end": "1430",
          "is_overnight": false,
          "start": "1100",
        },
        Object {
          "day": 1,
          "end": "2000",
          "is_overnight": false,
          "start": "1730",
        },
      ]
    }
  />
  <OpenHour
    day={2}
    hour={
      Array [
        Object {
          "day": 2,
          "end": "1430",
          "is_overnight": false,
          "start": "1100",
        },
        Object {
          "day": 2,
          "end": "2000",
          "is_overnight": false,
          "start": "1730",
        },
      ]
    }
  />
</div>
`;
